added dutch translations

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -11,7 +11,8 @@
     "nl": "DUCO"
   },
   "description": {
-    "en": "Duco, a Home Of Oxygen for a World of Oxygen."
+    "en": "Duco, a Home Of Oxygen for a World of Oxygen.",
+    "nl": "Duco, a Home Of Oxygen for a World of Oxygen."
   },
   "category": [
     "climate"
