--- a/app.json
+++ b/app.json
@@ -38,191 +38,80 @@
       }
     ]
   },
-  "drivers": [
-    {
-      "name": {
-        "en": "CO2 Box sensor",
-        "nl": "CO2 Boxsensor"
-      },
-      "class": "sensor",
-      "capabilities": [
-        "sensor_air_quality_co2"
-      ],
-      "platforms": [
-        "local"
-      ],
-      "connectivity": [
-        "lan"
-      ],
-      "images": {
-        "small": "/drivers/co2-box-sensor/assets/images/small.png",
-        "large": "/drivers/co2-box-sensor/assets/images/large.png",
-        "xlarge": "/drivers/co2-box-sensor/assets/images/xlarge.png"
-      },
-      "pair": [
-        {
-          "id": "list_my_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_my_devices"
-          }
-        },
-        {
-          "id": "add_my_devices",
-          "template": "add_devices"
-        }
-      ],
-      "id": "co2-box-sensor"
-    },
-    {
-      "name": {
-        "en": "CO2 Room sensor",
-        "nl": "CO2 Ruimtesensor"
-      },
-      "class": "sensor",
-      "capabilities": [
-        "sensor_air_quality_co2"
-      ],
-      "platforms": [
-        "local"
-      ],
-      "connectivity": [
-        "lan"
-      ],
-      "images": {
-        "small": "/drivers/co2-room-sensor/assets/images/small.png",
-        "large": "/drivers/co2-room-sensor/assets/images/large.png",
-        "xlarge": "/drivers/co2-room-sensor/assets/images/xlarge.png"
-      },
-      "pair": [
-        {
-          "id": "list_my_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_my_devices"
-          }
-        },
-        {
-          "id": "add_my_devices",
-          "template": "add_devices"
-        }
-      ],
-      "id": "co2-room-sensor"
-    },
-    {
-      "name": {
-        "en": "DucoBox Silent Connect",
-        "nl": "DucoBox Silent Connect"
-      },
-      "class": "fan",
-      "capabilities": [
-        "ventilation_state",
-        "ventilation_time_state_remain",
-        "ventilation_time_state_end",
-        "ventilation_mode",
-        "ventilation_flow_level_target",
-        "sensor_air_quality_rh",
-        "sensor_air_quality_co2"
-      ],
-      "platforms": [
-        "local"
-      ],
-      "connectivity": [
-        "lan"
-      ],
-      "images": {
-        "small": "/drivers/ducobox-silent-connect/assets/images/small.png",
-        "large": "/drivers/ducobox-silent-connect/assets/images/large.png",
-        "xlarge": "/drivers/ducobox-silent-connect/assets/images/xlarge.png"
-      },
-      "pair": [
-        {
-          "id": "list_my_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_my_devices"
-          }
-        },
-        {
-          "id": "add_my_devices",
-          "template": "add_devices"
-        }
-      ],
-      "id": "ducobox-silent-connect"
-    },
-    {
-      "name": {
-        "en": "Humidity Box sensor",
-        "nl": "Vocht Boxsensor"
-      },
-      "class": "sensor",
-      "capabilities": [
-        "sensor_air_quality_rh"
-      ],
-      "platforms": [
-        "local"
-      ],
-      "connectivity": [
-        "lan"
-      ],
-      "images": {
-        "small": "/drivers/humidity-box-sensor/assets/images/small.png",
-        "large": "/drivers/humidity-box-sensor/assets/images/large.png",
-        "xlarge": "/drivers/humidity-box-sensor/assets/images/xlarge.png"
-      },
-      "pair": [
-        {
-          "id": "list_my_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_my_devices"
-          }
-        },
-        {
-          "id": "add_my_devices",
-          "template": "add_devices"
-        }
-      ],
-      "id": "humidity-box-sensor"
-    },
-    {
-      "name": {
-        "en": "Humidity Room sensor",
-        "nl": "Vocht Ruimtesensor"
-      },
-      "class": "sensor",
-      "capabilities": [
-        "sensor_air_quality_rh"
-      ],
-      "platforms": [
-        "local"
-      ],
-      "connectivity": [
-        "lan"
-      ],
-      "images": {
-        "small": "/drivers/humidity-room-sensor/assets/images/small.png",
-        "large": "/drivers/humidity-room-sensor/assets/images/large.png",
-        "xlarge": "/drivers/humidity-room-sensor/assets/images/xlarge.png"
-      },
-      "pair": [
-        {
-          "id": "list_my_devices",
-          "template": "list_devices",
-          "navigation": {
-            "next": "add_my_devices"
-          }
-        },
-        {
-          "id": "add_my_devices",
-          "template": "add_devices"
-        }
-      ],
-      "id": "humidity-room-sensor"
-    }
-  ],
   "flow": {
     "triggers": [
+      {
+        "id": "co2-box-sensor__sensor_air_quality_co2_changed",
+        "title": {
+          "en": "Air quality (CO2) is changed",
+          "nl": "Lucht kwaliteit (CO2) is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Air quality (CO2) is changed",
+          "nl": "Lucht kwaliteit (CO2) is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_sensor_air_quality_co2",
+            "type": "number",
+            "title": {
+              "en": "Old value air quality (CO2)",
+              "nl": "Oude waarde lucht kwaliteit (CO2)"
+            }
+          },
+          {
+            "name": "new_sensor_air_quality_co2",
+            "type": "number",
+            "title": {
+              "en": "New value air quality (CO2)",
+              "nl": "Nieuwe waarde lucht kwaliteit (CO2)"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-box-sensor"
+          }
+        ]
+      },
+      {
+        "id": "co2-room-sensor__sensor_air_quality_co2_changed",
+        "title": {
+          "en": "Air quality (CO2) is changed",
+          "nl": "Lucht kwaliteit (CO2) is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Air quality (CO2) is changed",
+          "nl": "Lucht kwaliteit (CO2) is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_sensor_air_quality_co2",
+            "type": "number",
+            "title": {
+              "en": "Old value air quality (CO2)",
+              "nl": "Oude waarde lucht kwaliteit (CO2)"
+            }
+          },
+          {
+            "name": "new_sensor_air_quality_co2",
+            "type": "number",
+            "title": {
+              "en": "New value air quality (CO2)",
+              "nl": "Nieuwe waarde lucht kwaliteit (CO2)"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=co2-room-sensor"
+          }
+        ]
+      },
       {
         "id": "ducobox-silent-connect__ventilation_state_changed",
         "title": {
@@ -474,6 +363,78 @@
             "filter": "driver_id=ducobox-silent-connect"
           }
         ]
+      },
+      {
+        "id": "humidity-box-sensor__sensor_air_quality_rh_changed",
+        "title": {
+          "en": "Air quality (RH) is changed",
+          "nl": "Lucht kwaliteit (RH) is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Air quality (RH) is changed",
+          "nl": "Lucht kwaliteit (RH) is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_sensor_air_quality_rh",
+            "type": "number",
+            "title": {
+              "en": "Old value air quality (RH)",
+              "nl": "Oude waarde lucht kwaliteit (RH)"
+            }
+          },
+          {
+            "name": "new_sensor_air_quality_rh",
+            "type": "number",
+            "title": {
+              "en": "New value air quality (RH)",
+              "nl": "Nieuwe waarde lucht kwaliteit (RH)"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=humidity-box-sensor"
+          }
+        ]
+      },
+      {
+        "id": "humidity-room-sensor__sensor_air_quality_rh_changed",
+        "title": {
+          "en": "Air quality (RH) is changed",
+          "nl": "Lucht kwaliteit (RH) is aangepast"
+        },
+        "titleFormatted": {
+          "en": "Air quality (RH) is changed",
+          "nl": "Lucht kwaliteit (RH) is aangepast"
+        },
+        "tokens": [
+          {
+            "name": "old_sensor_air_quality_rh",
+            "type": "number",
+            "title": {
+              "en": "Old value air quality (RH)",
+              "nl": "Oude waarde lucht kwaliteit (RH)"
+            }
+          },
+          {
+            "name": "new_sensor_air_quality_rh",
+            "type": "number",
+            "title": {
+              "en": "New value air quality (RH)",
+              "nl": "Nieuwe waarde lucht kwaliteit (RH)"
+            }
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=humidity-room-sensor"
+          }
+        ]
       }
     ],
     "actions": [
@@ -622,6 +583,189 @@
       }
     ]
   },
+  "drivers": [
+    {
+      "name": {
+        "en": "CO2 Box sensor",
+        "nl": "CO2 Boxsensor"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "sensor_air_quality_co2"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/co2-box-sensor/assets/images/small.png",
+        "large": "/drivers/co2-box-sensor/assets/images/large.png",
+        "xlarge": "/drivers/co2-box-sensor/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_my_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_my_devices"
+          }
+        },
+        {
+          "id": "add_my_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "co2-box-sensor"
+    },
+    {
+      "name": {
+        "en": "CO2 Room sensor",
+        "nl": "CO2 Ruimtesensor"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "sensor_air_quality_co2"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/co2-room-sensor/assets/images/small.png",
+        "large": "/drivers/co2-room-sensor/assets/images/large.png",
+        "xlarge": "/drivers/co2-room-sensor/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_my_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_my_devices"
+          }
+        },
+        {
+          "id": "add_my_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "co2-room-sensor"
+    },
+    {
+      "name": {
+        "en": "DucoBox Silent Connect",
+        "nl": "DucoBox Silent Connect"
+      },
+      "class": "fan",
+      "capabilities": [
+        "ventilation_state",
+        "ventilation_time_state_remain",
+        "ventilation_time_state_end",
+        "ventilation_mode",
+        "ventilation_flow_level_target",
+        "sensor_air_quality_rh",
+        "sensor_air_quality_co2"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/ducobox-silent-connect/assets/images/small.png",
+        "large": "/drivers/ducobox-silent-connect/assets/images/large.png",
+        "xlarge": "/drivers/ducobox-silent-connect/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_my_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_my_devices"
+          }
+        },
+        {
+          "id": "add_my_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "ducobox-silent-connect"
+    },
+    {
+      "name": {
+        "en": "Humidity Box sensor",
+        "nl": "Vocht Boxsensor"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "sensor_air_quality_rh"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/humidity-box-sensor/assets/images/small.png",
+        "large": "/drivers/humidity-box-sensor/assets/images/large.png",
+        "xlarge": "/drivers/humidity-box-sensor/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_my_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_my_devices"
+          }
+        },
+        {
+          "id": "add_my_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "humidity-box-sensor"
+    },
+    {
+      "name": {
+        "en": "Humidity Room sensor",
+        "nl": "Vocht Ruimtesensor"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "sensor_air_quality_rh"
+      ],
+      "platforms": [
+        "local"
+      ],
+      "connectivity": [
+        "lan"
+      ],
+      "images": {
+        "small": "/drivers/humidity-room-sensor/assets/images/small.png",
+        "large": "/drivers/humidity-room-sensor/assets/images/large.png",
+        "xlarge": "/drivers/humidity-room-sensor/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_my_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_my_devices"
+          }
+        },
+        {
+          "id": "add_my_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "humidity-room-sensor"
+    }
+  ],
   "capabilities": {
     "sensor_air_quality_co2": {
       "type": "number",
