--- a/app.json
+++ b/app.json
@@ -52,7 +52,7 @@
         },
         "tokens": [
           {
-            "name": "old_sensor_air_quality_co2",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value air quality (CO2)",
@@ -60,7 +60,7 @@
             }
           },
           {
-            "name": "new_sensor_air_quality_co2",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value air quality (CO2)",
@@ -88,7 +88,7 @@
         },
         "tokens": [
           {
-            "name": "old_sensor_air_quality_co2",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value air quality (CO2)",
@@ -96,7 +96,7 @@
             }
           },
           {
-            "name": "new_sensor_air_quality_co2",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value air quality (CO2)",
@@ -124,7 +124,7 @@
         },
         "tokens": [
           {
-            "name": "old_ventilation_state",
+            "name": "old_value",
             "type": "string",
             "title": {
               "en": "Old value ventilation state",
@@ -132,7 +132,7 @@
             }
           },
           {
-            "name": "new_ventilation_state",
+            "name": "new_value",
             "type": "string",
             "title": {
               "en": "New value ventilation state",
@@ -160,7 +160,7 @@
         },
         "tokens": [
           {
-            "name": "old_ventilation_time_state_remain",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value duration current state",
@@ -168,7 +168,7 @@
             }
           },
           {
-            "name": "new_ventilation_time_state_remain",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value duration current state",
@@ -196,7 +196,7 @@
         },
         "tokens": [
           {
-            "name": "old_ventilation_time_state_end",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value time current state end",
@@ -204,7 +204,7 @@
             }
           },
           {
-            "name": "new_ventilation_time_state_end",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value time current state end",
@@ -232,7 +232,7 @@
         },
         "tokens": [
           {
-            "name": "old_ventilation_mode",
+            "name": "old_value",
             "type": "string",
             "title": {
               "en": "Old value ventilation mode",
@@ -240,7 +240,7 @@
             }
           },
           {
-            "name": "new_ventilation_mode",
+            "name": "new_value",
             "type": "string",
             "title": {
               "en": "New value ventilation mode",
@@ -268,7 +268,7 @@
         },
         "tokens": [
           {
-            "name": "old_ventilation_flow_level_target",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value flow level target",
@@ -276,7 +276,7 @@
             }
           },
           {
-            "name": "new_ventilation_flow_level_target",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value flow level target",
@@ -304,7 +304,7 @@
         },
         "tokens": [
           {
-            "name": "old_sensor_air_quality_rh",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value air quality (RH)",
@@ -312,7 +312,7 @@
             }
           },
           {
-            "name": "new_sensor_air_quality_rh",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value air quality (RH)",
@@ -340,7 +340,7 @@
         },
         "tokens": [
           {
-            "name": "old_sensor_air_quality_co2",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value air quality (CO2)",
@@ -348,7 +348,7 @@
             }
           },
           {
-            "name": "new_sensor_air_quality_co2",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value air quality (CO2)",
@@ -376,7 +376,7 @@
         },
         "tokens": [
           {
-            "name": "old_sensor_air_quality_rh",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value air quality (RH)",
@@ -384,7 +384,7 @@
             }
           },
           {
-            "name": "new_sensor_air_quality_rh",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value air quality (RH)",
@@ -412,7 +412,7 @@
         },
         "tokens": [
           {
-            "name": "old_sensor_air_quality_rh",
+            "name": "old_value",
             "type": "number",
             "title": {
               "en": "Old value air quality (RH)",
@@ -420,7 +420,7 @@
             }
           },
           {
-            "name": "new_sensor_air_quality_rh",
+            "name": "new_value",
             "type": "number",
             "title": {
               "en": "New value air quality (RH)",
