fix memory leak warning + change ventilation time state end to a formatted datetime

--- a/app.json
+++ b/app.json
@@ -197,7 +197,7 @@
         "tokens": [
           {
             "name": "old_value",
-            "type": "number",
+            "type": "string",
             "title": {
               "en": "Old value time current state end",
               "nl": "Oude waarde eind tijd huidige stand"
@@ -205,7 +205,7 @@
           },
           {
             "name": "new_value",
-            "type": "number",
+            "type": "string",
             "title": {
               "en": "New value time current state end",
               "nl": "Nieuwe waarde eind tijd huidige stand"
@@ -1009,7 +1009,7 @@
       ]
     },
     "ventilation_time_state_end": {
-      "type": "number",
+      "type": "string",
       "title": {
         "en": "Time state end",
         "nl": "Eind tijd stand"
