--- a/app.json
+++ b/app.json
@@ -38,6 +38,10 @@
       }
     ]
   },
+  "bugs": {
+    "url": "https://github.com/aartse/athom.duco/issues"
+  },
+  "support": "https://github.com/aartse/athom.duco/issues",
   "flow": {
     "triggers": [
       {
